# cpp11_image_task_scheduler

./: CMakeLists.txt  README.md
docs/: architecture.md  cpp11_knowledge.md  interview_architecture_guide.md  resume_description.md
include/image_task_scheduler/: blur_processor.hpp  config.hpp  dataset_cleaner.hpp  dataset_pipline.hpp  factory_processor.hpp  file_utils.hpp  gray_processor.hpp  image_processor.hpp  image_quality.hpp  image_result.hpp  image_task.hpp  logger.hpp  make_unique.hpp  quality_analyzer.hpp  quality_report_writer.hpp  quality_scheduler.hpp  resize_processor.hpp  sobel_processor.hpp  task_scheduler.hpp  thread_pool.hpp  timer.hpp
output/: bad_images.txt  report.csv
src/: blur_processor.cpp  config.cpp  dataset_cleaner.cpp  dataset_pipline.cpp  factory_processor.cpp  file_utils.cpp  gray_processor.cpp  image_task.cpp  logger.cpp  main.cpp  quality_analyzer.cpp  quality_report_write.cpp  quality_scheduler.cpp  resize_processor.cpp  sobel_processor.cpp  task_scheduler.cpp  thread_pool.cpp  timer.cpp
